# raylib_template

./: CMakeLists.txt  README.md  init.sh
src/: main.c
